| Summary: | ASTERISK-28614: app_senddtmf: Allow "receiving" DTMF with PlayDTMF instead of only "sending" | ||
| Reporter: | laszlovl (lvl) | Labels: | |
| Date Opened: | 2019-11-07 10:58:08.000-0600 | Date Closed: | 2019-11-21 08:37:39.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_senddtmf |
| Versions: | 16.6.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When you use the Manager Action PlayDTMF, it'll always (from the perspective of Asterisk) _send_ them out to the target channel.
In some scenarios, it can be useful to emulate _receiving_ DTMF on a given channel. For example, when a phone is dialing to an arbitrary (not previously known) dialplan function such as Queue() or Read() and you want to send DTMF on the phone's behalf, for example because the phone doesn't have a DTMF pad. I'll be submitting a feature branch and testcase. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-11-07 10:58:09.820-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-11-21 08:37:40.807-0600 Change 13163 merged by Friendly Automation: app_senddtmf: Add receive mode to AMI Action PlayDTMF [https://gerrit.asterisk.org/c/asterisk/+/13163|https://gerrit.asterisk.org/c/asterisk/+/13163] By: Friendly Automation (friendly-automation) 2019-11-21 08:42:08.531-0600 Change 13243 merged by Friendly Automation: app_senddtmf: Add receive mode to AMI Action PlayDTMF [https://gerrit.asterisk.org/c/asterisk/+/13243|https://gerrit.asterisk.org/c/asterisk/+/13243] By: Friendly Automation (friendly-automation) 2019-11-21 09:22:04.698-0600 Change 13241 merged by George Joseph: app_senddtmf: Add receive mode to AMI Action PlayDTMF [https://gerrit.asterisk.org/c/asterisk/+/13241|https://gerrit.asterisk.org/c/asterisk/+/13241] By: Friendly Automation (friendly-automation) 2019-11-21 09:23:28.746-0600 Change 13242 merged by George Joseph: app_senddtmf: Add receive mode to AMI Action PlayDTMF [https://gerrit.asterisk.org/c/asterisk/+/13242|https://gerrit.asterisk.org/c/asterisk/+/13242] | ||